<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/bMean"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/menu_mean_blur" />

        <Button
            android:id="@+id/bGaussian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_gaussian_blur" />

        <Button
            android:id="@+id/bMedian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_median_blur" />

        <Button
            android:id="@+id/bSharpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_sharpen" />

        <Button
            android:id="@+id/bThreshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_threshold" />
        <Button
            android:id="@+id/bRegionLabeling"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_weight="1"
            android:onClick="b7_Click"
            android:text="@string/menu_region_labeling" />

    </LinearLayout>
</ScrollView>